# codeTree

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.codetree/: index.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: test.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
docs/: LANDING_PAGE.md  TOOLS_GUIDE.md  language-nodes.md
docs/plans/: 2026-03-05-codetree-design.md  2026-03-05-codetree-implementation.md  2026-03-05-competitive-analysis.md  2026-03-05-easy-wins-design.md  2026-03-05-easy-wins-implementation.md  2026-03-05-multi-language-design.md  (+9 more)
tests/: conftest.py  test_ast.py  test_batch.py  test_blast_radius.py  test_cache.py  test_change_impact.py  test_clones.py  test_complexity.py  test_concurrency.py  test_data_integrity.py  test_dataflow.py  test_dataflow_tools.py  test_dead_code.py  test_discovery.py  test_doc_suggestions.py  test_docstrings.py  test_edge_cases.py  test_git_analysis.py  test_graph_builder.py  test_graph_queries.py  test_graph_store.py  test_importance.py  test_imports.py  test_indexer.py  test_new_features.py  test_onboarding_tools.py  test_path_security.py  test_queries.py  test_search.py  test_server.py  test_server_new_types.py  test_syntax_errors.py  test_token_opt.py  test_variables.py
(+48 files in other folders)
